tests/examples/fail/sorts/def_ret_use.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

sort s

def f(x: s, y: s) -> bool {
  x = y
}

assert forall x:s, y:s. exists z:s. f(x, y) = z
